--- a/backend/static/viewer.html
+++ b/backend/static/viewer.html
@@ -1,239 +1,111 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <title>Nexus Mobile AI - Live Viewer</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <style>
-    :root { --bg:#0b0b0b; --panel:#111; --muted:#9aa; --accent:#00e676; --danger:#ff4d4f; }
-    body { margin:0; background:var(--bg); color:#fff; font-family:Arial,Helvetica,sans-serif; -webkit-font-smoothing:antialiased; }
-    header { padding:12px; background:var(--panel); border-bottom:1px solid #222; text-align:center; }
-    #container { display:flex; flex-direction:column; gap:10px; padding:12px; max-width:1200px; margin:0 auto; }
-    #canvasWrap { display:flex; justify-content:center; }
-    canvas { background:#000; border:1px solid #222; max-width:100%; height:auto; }
-    .info { display:flex; gap:12px; justify-content:space-between; flex-wrap:wrap; color:var(--muted); font-size:13px; }
-    .panel { background:#121212; padding:10px; border-radius:6px; }
-    #analysis { margin-top:6px; color:var(--muted); font-size:13px; }
-    #log { margin-top:8px; max-height:180px; overflow:auto; font-size:12px; color:#cfcfcf; background:rgba(255,255,255,0.02); padding:8px; border-radius:6px; }
-    #statusDot { width:10px; height:10px; border-radius:50%; display:inline-block; margin-right:6px; vertical-align:middle; background:orange; }
-    /* Signal overlay */
-    #signalOverlay {
-      position:fixed;
-      right:20px;
-      top:80px;
-      z-index:2147483647;
-      min-width:320px;
-      max-width:420px;
-      padding:14px;
-      border-radius:12px;
-      box-shadow:0 8px 30px rgba(0,0,0,0.7);
-      display:none;
-      color:#fff;
-      font-family:Arial,Helvetica,sans-serif;
-    }
-    #signalOverlay h2 { margin:0 0 6px 0; font-size:18px; }
-    #signalOverlay p { margin:4px 0; font-size:14px; color:#f0f0f0; }
-    #signalOverlay .meta { font-size:13px; color:#ddd; }
-    #signalTimer { font-weight:bold; font-size:16px; margin-top:8px; }
-    .green { background: linear-gradient(90deg,#0f7 20%, #078 100%); color:#002; }
-    .red { background: linear-gradient(90deg,#f66 20%, #d33 100%); color:#200; }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Nexus Mobile AI Viewer</title>
+    <style>
+        body { font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #1a1a2e; color: #e0e0e0; display: flex; flex-direction: column; align-items: center; }
+        #header { width: 100%; background-color: #0f0f1a; padding: 10px 0; text-align: center; border-bottom: 1px solid #333; }
+        #header h1 { margin: 0; color: #e0e0e0; }
+        #status { margin: 10px 0; font-size: 0.9em; color: #aaa; }
+        #image-container { margin-top: 20px; border: 2px solid #333; border-radius: 8px; overflow: hidden; max-width: 90%; }
+        #stream-image { width: 100%; height: auto; display: block; }
+        #signal-info { background-color: #2a2a4a; border: 1px solid #444; border-radius: 8px; padding: 15px; margin-top: 20px; width: 90%; max-width: 600px; }
+        #signal-info h2 { color: #8aff8a; margin-top: 0; }
+        #signal-info p { margin: 5px 0; }
+        .signal-item { border-bottom: 1px dashed #555; padding-bottom: 10px; margin-bottom: 10px; }
+        .signal-item:last-child { border-bottom: none; margin-bottom: 0; padding-bottom: 0; }
+        .signal-direction.call { color: #00ff00; font-weight: bold; }
+        .signal-direction.put { color: #ff0000; font-weight: bold; }
+        .signal-probability { color: #8aff8a; }
+        .signal-reason { font-style: italic; color: #ccc; }
+        #log-container { background-color: #0f0f1a; border: 1px solid #333; border-radius: 8px; padding: 10px; margin-top: 20px; width: 90%; max-width: 600px; max-height: 200px; overflow-y: scroll; font-size: 0.8em; color: #777; }
+        .log-entry { margin-bottom: 3px; }
+    </style>
 </head>
 <body>
-  <header><strong>Nexus Mobile AI — Live Viewer (visual)</strong></header>
-
-  <div id="container">
-    <div class="info panel">
-      <div><span id="statusDot"></span><span id="stText">Conectando...</span></div>
-      <div>Par: <strong id="pair">—</strong></div>
-      <div>Último frame: <strong id="lastTime">—</strong></div>
-      <div>Latência: <strong id="lat">—</strong></div>
+    <div id="header">
+        <h1>Nexus Mobile AI Viewer</h1>
+    </div>
+    <div id="status">Conectando...</div>
+    <div id="image-container">
+        <img id="stream-image" src="https://placehold.co/600x400?text=Aguardando+frames..." alt="Stream Image">
+    </div>
+    <div id="signal-info">
+        <h2>Último Sinal:</h2>
+        <div id="last-signal-content">Nenhum sinal recebido ainda.</div>
+    </div>
+    <div id="log-container">
+        <h3>Logs:</h3>
+        <div id="logs"></div>
     </div>
 
-    <div id="canvasWrap" class="panel">
-      <canvas id="liveCanvas" width="980" height="520"></canvas>
-    </div>
+    <script>
+        const backendUrl = "wss://nexus-mobile-ai.onrender.com"; // <-- ATENÇÃO: Substitua pela URL do seu serviço na Render
+        const wsStreamUrl = `${backendUrl.replace('https', 'wss')}/ws/viewer`;
+        const statusDiv = document.getElementById('status');
+        const streamImage = document.getElementById('stream-image');
+        const lastSignalContent = document.getElementById('last-signal-content');
+        const logsDiv = document.getElementById('logs');
 
-    <div id="analysis" class="panel">
-      <div><strong>Análise:</strong></div>
-      <div>Confluências: <span id="confs">--</span></div>
-      <div>Probabilidade: <span id="prob">--</span></div>
-      <div id="reason">—</div>
-    </div>
-
-    <div id="log" class="panel"></div>
-  </div>
-
-  <div id="signalOverlay" role="alert" aria-live="assertive">
-    <h2 id="signalTitle">SINAL</h2>
-    <div id="signalDetails" class="meta"></div>
-    <p id="signalReason"></p>
-    <div id="signalTimer"></div>
-  </div>
-
-<script>
-(function(){
-  const canvas = document.getElementById('liveCanvas');
-  const ctx = canvas.getContext('2d');
-  const stText = document.getElementById('stText');
-  const statusDot = document.getElementById('statusDot');
-  const pairEl = document.getElementById('pair');
-  const lastTimeEl = document.getElementById('lastTime');
-  const latEl = document.getElementById('lat');
-  const confsEl = document.getElementById('confs');
-  const probEl = document.getElementById('prob');
-  const reasonEl = document.getElementById('reason');
-  const logEl = document.getElementById('log');
-
-  const signalOverlay = document.getElementById('signalOverlay');
-  const signalTitle = document.getElementById('signalTitle');
-  const signalDetails = document.getElementById('signalDetails');
-  const signalReason = document.getElementById('signalReason');
-  const signalTimer = document.getElementById('signalTimer');
-
-  const WS_URL = (location.protocol === 'https:' ? 'wss://' : 'ws://') + location.host + '/ws/viewer';
-  let ws = null;
-  let lastRecvTs = 0;
-  let img = new Image();
-  let pendingUrl = null;
-  let currentSignalTimeout = null;
-
-  function addLog(text){
-    const p = document.createElement('div');
-    p.textContent = `[${new Date().toLocaleTimeString()}] ${text}`;
-    logEl.prepend(p);
-    if (logEl.children.length > 80) logEl.removeChild(logEl.lastChild);
-  }
-
-  function showSignalOverlay(signal) {
-    if (!signal) return;
-    // populate overlay
-    const dir = signal.direction === 'call' ? 'Compra' : 'Venda';
-    const entryTime = new Date(signal.entry_time);
-    signalTitle.textContent = `${dir} — ${signal.pair}`;
-    signalDetails.textContent = `${dir} às ${entryTime.toLocaleTimeString()} • Prob: ${Math.round(signal.probability*100)}%`;
-    signalReason.textContent = `Motivo: ${signal.reason || ''}`;
-    signalOverlay.className = signal.direction === 'call' ? 'green' : 'red';
-    signalOverlay.style.display = 'block';
-    // timer until entry
-    if (currentSignalTimeout) {
-      clearInterval(currentSignalTimeout);
-      currentSignalTimeout = null;
-    }
-    currentSignalTimeout = setInterval(() => {
-      const now = new Date();
-      const diff = (new Date(signal.entry_time) - now) / 1000;
-      if (diff <= 0) {
-        signalTimer.textContent = 'Entrada AGORA';
-        clearInterval(currentSignalTimeout);
-        currentSignalTimeout = null;
-      } else {
-        const s = Math.max(0, Math.floor(diff));
-        signalTimer.textContent = `Entrada em ${s}s`;
-      }
-    }, 250);
-    // play audio (pt-BR)
-    try {
-      const utter = new SpeechSynthesisUtterance(`${signal.direction === 'call' ? 'Compra' : 'Venda'} em ${signal.pair} às ${entryTime.toLocaleTimeString()}. Probabilidade ${Math.round(signal.probability*100)} por cento. Motivo: ${signal.reason}`);
-      utter.lang = 'pt-BR';
-      speechSynthesis.speak(utter);
-    } catch(e){ console.warn('speech error', e); }
-    addLog(`SINAL: ${signal.pair} ${signal.direction} @ ${signal.entry_time} prob=${signal.probability}`);
-  }
-
-  function hideSignalOverlay() {
-    signalOverlay.style.display = 'none';
-    if (currentSignalTimeout) {
-      clearInterval(currentSignalTimeout);
-      currentSignalTimeout = null;
-    }
-  }
-
-  function connect(){
-    ws = new WebSocket(WS_URL);
-    ws.onopen = () => {
-      stText.textContent = 'Conectado';
-      statusDot.style.background = 'limegreen';
-      addLog('WS conectado');
-    };
-    ws.onmessage = (ev) => {
-      try {
-        const msg = JSON.parse(ev.data);
-        if (msg.type === 'frame' && msg.data) {
-          const now = Date.now();
-          pairEl.textContent = msg.pair || 'AUTO';
-          lastTimeEl.textContent = new Date(msg.timestamp).toLocaleTimeString();
-          latEl.textContent = (now - new Date(msg.timestamp).getTime()).toString() + ' ms';
-          // analysis info display
-          if (msg.analysis) {
-            if (msg.analysis.signal) {
-              showSignalOverlay(msg.analysis.signal);
-            } else {
-              // if no signal, update brief analysis
-              confsEl.textContent = msg.analysis.confluences !== undefined ? msg.analysis.confluences : '--';
-              probEl.textContent = msg.analysis.probability ? (Math.round(msg.analysis.probability*100) + '%') : '--';
-              reasonEl.textContent = msg.analysis.reason || '--';
-              // hide overlay if not signal for extended period
-              setTimeout(() => { /* optional auto-hide after X */ }, 60000);
+        function appendLog(message) {
+            const logEntry = document.createElement('div');
+            logEntry.className = 'log-entry';
+            logEntry.textContent = `[${new Date().toLocaleTimeString()}] ${message}`;
+            logsDiv.prepend(logEntry); // Adiciona no início para ver os mais recentes
+            if (logsDiv.children.length > 50) { // Limita o número de logs
+                logsDiv.removeChild(logsDiv.lastChild);
             }
-          }
-          // converte base64 para Blob, cria URL e desenha no canvas
-          const mime = msg.mime || 'image/webp';
-          const b64 = msg.data;
-          const binary = atob(b64);
-          const len = binary.length;
-          const bytes = new Uint8Array(len);
-          for (let i = 0; i < len; i++) bytes[i] = binary.charCodeAt(i);
-          const blob = new Blob([bytes], {type: mime});
-          const url = URL.createObjectURL(blob);
-
-          img.onload = function(){
-            const maxW = Math.min(window.innerWidth - 40, 1100);
-            const scale = Math.min(maxW / img.width, 1);
-            canvas.width = Math.round(img.width * scale);
-            canvas.height = Math.round(img.height * scale);
-            ctx.clearRect(0,0,canvas.width,canvas.height);
-            ctx.drawImage(img, 0, 0, canvas.width, canvas.height);
-            // overlay timestamp
-            ctx.fillStyle = 'rgba(0,0,0,0.45)';
-            ctx.fillRect(6, 6, 180, 24);
-            ctx.fillStyle = '#fff';
-            ctx.font = '13px Arial';
-            ctx.fillText(new Date(msg.timestamp).toLocaleTimeString(), 12, 24);
-            if (pendingUrl) URL.revokeObjectURL(pendingUrl);
-            pendingUrl = url;
-          };
-          img.onerror = function(e){
-            addLog('Erro carregando imagem: ' + e);
-            URL.revokeObjectURL(url);
-          };
-          img.src = url;
-
-          addLog('Frame recebido • size=' + b64.length);
         }
-      } catch (e) {
-        addLog('Erro ao processar mensagem: ' + e.message);
-        console.error(e);
-      }
-    };
-    ws.onclose = () => {
-      stText.textContent = 'Desconectado';
-      statusDot.style.background = 'orange';
-      addLog('WS desconectado — reconectando em 2s');
-      setTimeout(connect, 2000);
-    };
-    ws.onerror = (err) => {
-      addLog('Erro WS: ' + (err.message || JSON.stringify(err)));
-      console.error('WS error', err);
-    };
-  }
 
-  connect();
+        function connectWebSocket() {
+            statusDiv.textContent = "Conectando ao WebSocket...";
+            appendLog("Tentando conectar ao WebSocket...");
+            const ws = new WebSocket(wsStreamUrl);
 
-  // click overlay to hide
-  signalOverlay.addEventListener('click', () => hideSignalOverlay());
+            ws.onopen = () => {
+                statusDiv.textContent = "Conectado ao Nexus CORE!";
+                appendLog("Conexão WebSocket aberta.");
+            };
 
-})();
-</script>
+            ws.onmessage = (event) => {
+                const data = JSON.parse(event.data);
+                if (data.type === 'frame' && data.data) {
+                    streamImage.src = `data:${data.mime};base64,${data.data}`;
+                    statusDiv.textContent = `Frame recebido para ${data.pair} (${new Date(data.timestamp).toLocaleTimeString()})`;
+                    appendLog(`Frame recebido para ${data.pair}`);
+                } else if (data.type === 'signal' && data.signal) {
+                    const signal = data.signal;
+                    const entryTime = new Date(signal.entry_time).toLocaleTimeString('pt-BR', { timeZone: 'America/Sao_Paulo' });
+                    lastSignalContent.innerHTML = `
+                        <div class="signal-item">
+                            <p>Par: <strong>${signal.pair}</strong></p>
+                            <p>Direção: <span class="signal-direction ${signal.direction.toLowerCase()}">${signal.direction.toUpperCase()}</span></p>
+                            <p>Entrada: <strong>${entryTime}</strong> (Brasília)</p>
+                            <p>Probabilidade: <span class="signal-probability">${(signal.probability * 100).toFixed(0)}%</span></p>
+                            <p>Motivo: <span class="signal-reason">${signal.reason}</span></p>
+                        </div>
+                    `;
+                    appendLog(`Sinal recebido: ${signal.pair} ${signal.direction.toUpperCase()} às ${entryTime}`);
+                }
+            };
+
+            ws.onclose = () => {
+                statusDiv.textContent = "Desconectado. Tentando reconectar em 5s...";
+                appendLog("Conexão WebSocket fechada. Tentando reconectar...");
+                setTimeout(connectWebSocket, 5000);
+            };
+
+            ws.onerror = (error) => {
+                statusDiv.textContent = "Erro no WebSocket. Verifique os logs do console.";
+                appendLog(`Erro no WebSocket: ${error.message || error}`);
+                console.error("WebSocket Error:", error);
+                ws.close();
+            };
+        }
+
+        connectWebSocket();
+    </script>
 </body>
 </html>
