--- a/backend/static/viewer.html
+++ b/backend/static/viewer.html
@@ -1,189 +1,46 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
+<!doctype html>
+<html>
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Nexus Mobile AI Viewer</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #1a1a2e;
-            color: #e0e0e0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-        #header {
-            width: 100%;
-            background-color: #0f0f1a;
-            padding: 10px 0;
-            text-align: center;
-            border-bottom: 1px solid #333;
-        }
-        #header h1 {
-            margin: 0;
-            color: #e0e0e0;
-        }
-        #status {
-            margin: 10px 0;
-            font-size: 0.9em;
-            color: #aaa;
-        }
-        #image-container {
-            margin-top: 20px;
-            border: 2px solid #333;
-            border-radius: 8px;
-            overflow: hidden;
-            max-width: 90%;
-        }
-        #stream-image {
-            width: 100%;
-            height: auto;
-            display: block;
-        }
-        #signal-info {
-            background-color: #2a2a4a;
-            border: 1px solid #444;
-            border-radius: 8px;
-            padding: 15px;
-            margin-top: 20px;
-            width: 90%;
-            max-width: 600px;
-        }
-        #signal-info h2 {
-            color: #8aff8a;
-            margin-top: 0;
-        }
-        #signal-info p {
-            margin: 5px 0;
-        }
-        .signal-item {
-            border-bottom: 1px dashed #555;
-            padding-bottom: 10px;
-            margin-bottom: 10px;
-        }
-        .signal-item:last-child {
-            border-bottom: none;
-            margin-bottom: 0;
-            padding-bottom: 0;
-        }
-        .signal-direction.call {
-            color: #00ff00;
-            font-weight: bold;
-        }
-        .signal-direction.put {
-            color: #ff0000;
-            font-weight: bold;
-        }
-        .signal-probability {
-            color: #8aff8a;
-        }
-        .signal-reason {
-            font-style: italic;
-            color: #ccc;
-        }
-        #log-container {
-            background-color: #0f0f1a;
-            border: 1px solid #333;
-            border-radius: 8px;
-            padding: 10px;
-            margin-top: 20px;
-            width: 90%;
-            max-width: 600px;
-            max-height: 200px;
-            overflow-y: scroll;
-            font-size: 0.8em;
-            color: #777;
-        }
-        .log-entry {
-            margin-bottom: 3px;
-        }
-    </style>
+<meta charset="utf-8">
+<title>Nexus Mobile AI - Viewer</title>
+<style>
+body{margin:0;background:#0a0f20;color:#fff;font-family:sans-serif;display:flex;flex-direction:column;height:100vh}
+#header{padding:10px;background:#0005}
+#status{font-weight:700}
+#content{flex:1;display:flex;justify-content:center;align-items:center;background:#000}
+#content img{max-width:100%;max-height:100%}
+</style>
 </head>
 <body>
-    <div id="header">
-        <h1>Nexus Mobile AI Viewer</h1>
-    </div>
-    <div id="status">Conectando...</div>
-    <div id="image-container">
-        <img id="stream-image" src="https://placehold.co/600x400?text=Aguardando+frames..." alt="Stream Image" />
-    </div>
-    <div id="signal-info">
-        <h2>Último Sinal:</h2>
-        <div id="last-signal-content">Nenhum sinal recebido ainda.</div>
-    </div>
-    <div id="log-container">
-        <h3>Logs:</h3>
-        <div id="logs"></div>
-    </div>
 
-    <script>
-        const backendUrl = "https://nexus-mobile-ai.onrender.com";
-        const wsStreamUrl = backendUrl.replace(/^http/, 'ws') + "/ws/viewer";
-        const statusDiv = document.getElementById('status');
-        const streamImage = document.getElementById('stream-image');
-        const lastSignalContent = document.getElementById('last-signal-content');
-        const logsDiv = document.getElementById('logs');
+<div id="header">
+  <span id="status">Conectando...</span> - 
+  <span id="info"></span>
+</div>
 
-        function appendLog(message) {
-            const logEntry = document.createElement('div');
-            logEntry.className = 'log-entry';
-            logEntry.textContent = `[${new Date().toLocaleTimeString()}] ${message}`;
-            logsDiv.prepend(logEntry);
-            if (logsDiv.children.length > 50) {
-                logsDiv.removeChild(logsDiv.lastChild);
-            }
-        }
+<div id="content"><span>Nenhum frame recebido</span></div>
 
-        function connectWebSocket() {
-            statusDiv.textContent = "Conectando ao WebSocket...";
-            appendLog("Tentando conectar ao WebSocket...");
-            const ws = new WebSocket(wsStreamUrl);
+<script>
+const statusEl=document.getElementById("status");
+const infoEl=document.getElementById("info");
+const contentEl=document.getElementById("content");
 
-            ws.onopen = () => {
-                statusDiv.textContent = "Conectado ao Nexus CORE!";
-                appendLog("Conexão WebSocket aberta.");
-            };
+const proto=location.protocol==="https:"?"wss":"ws";
+const ws=new WebSocket(proto+"://"+location.host+"/ws/viewer");
 
-            ws.onmessage = (event) => {
-                const data = JSON.parse(event.data);
-                if (data.type === 'frame' && data.data) {
-                    streamImage.src = `data:${data.mime};base64,${data.data}`;
-                    statusDiv.textContent = `Frame recebido para ${data.pair} (${new Date(data.timestamp).toLocaleTimeString()})`;
-                    appendLog(`Frame recebido para ${data.pair}`);
-                } else if (data.type === 'signal' && data.signal) {
-                    const signal = data.signal;
-                    const entryTime = new Date(signal.entry_time).toLocaleTimeString('pt-BR', { timeZone: 'America/Sao_Paulo' });
-                    lastSignalContent.innerHTML = `
-                        <div class="signal-item">
-                            <p>Par: <strong>${signal.pair}</strong></p>
-                            <p>Direção: <span class="signal-direction ${signal.direction.toLowerCase()}">${signal.direction.toUpperCase()}</span></p>
-                            <p>Entrada: <strong>${entryTime}</strong> (Brasília)</p>
-                            <p>Probabilidade: <span class="signal-probability">${(signal.probability * 100).toFixed(0)}%</span></p>
-                            <p>Motivo: <span class="signal-reason">${signal.reason}</span></p>
-                        </div>
-                    `;
-                    appendLog(`Sinal recebido: ${signal.pair} ${signal.direction.toUpperCase()} às ${entryTime}`);
-                }
-            };
+ws.onopen=()=>statusEl.textContent="Conectado ✔";
+ws.onclose=()=>statusEl.textContent="Desconectado ✖";
 
-            ws.onclose = () => {
-                statusDiv.textContent = "Desconectado. Tentando reconectar em 5s...";
-                appendLog("Conexão WebSocket fechada. Tentando reconectar...");
-                setTimeout(connectWebSocket, 5000);
-            };
+ws.onmessage=(ev)=>{
+  const msg=JSON.parse(ev.data);
+  if(msg.type==="frame"){
+    contentEl.innerHTML="<img id='img'>";
+    const img=document.getElementById("img");
+    img.src="data:"+msg.mime+";base64,"+msg.data;
+    infoEl.textContent="Par "+msg.pair+" | "+(msg.analysis?.suggested_action||"")+" | "+new Date().toLocaleTimeString();
+  }
+};
+</script>
 
-            ws.onerror = (error) => {
-                statusDiv.textContent = "Erro no WebSocket. Verifique os logs do console.";
-                appendLog(`Erro no WebSocket: ${error.message || error}`);
-                console.error("WebSocket Error:", error);
-                ws.close();
-            };
-        }
-
-        connectWebSocket();
-    </script>
 </body>
 </html>
